menifests/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: docker.io/hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from Order Service!"
          ports:
            - containerPort: 5678
