menifests/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  type: NodePort
  ports:
    - port: 80
      targetPort: 5678
      nodePort: 31001
